fix: alignment

--- a/src/pages/dashboard/announcements/announcement-dialog.scss
+++ b/src/pages/dashboard/announcements/announcement-dialog.scss
@@ -1,6 +1,26 @@
 @use 'components/shared/styles/mixins' as *;
 
 .announcement-dialog {
+    .announcement-dialog--pwa__body-main-content {
+        padding: 20px;
+
+        .announcement-dialog--pwa__body-item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 1rem;
+
+            @include mobile-or-tablet-screen {
+                justify-content: left;
+                align-items: flex-start;
+            }
+
+            p {
+                margin-left: 1rem;
+            }
+        }
+    }
+
     .dc-dialog {
         &__dialog {
             max-width: calc(440px - 4.8rem);
